--- a/book/Text/catalogue.xhtml
+++ b/book/Text/catalogue.xhtml
@@ -15,7 +15,7 @@
 				<li><a href="introduction.xhtml">导言：拉康第二次回到弗洛伊德</a></li>
 				<li>
 					<a href="chapter_1.xhtml">第一章</a>
-					<ol>
+					<ol style="text-indent:2rem">
 						<li><a href="chapter_1.xhtml#part_1">结构与历史</a></li>
 						<li><a href="chapter_1.xhtml#part_2">索绪尔和政治经济学</a></li>
 						<li><a href="chapter_1.xhtml#part_3">表征和生产</a></li>
