--- a/book/Text/catalogue_en.xhtml
+++ b/book/Text/catalogue_en.xhtml
@@ -15,7 +15,7 @@
 				<li><a href="introduction_en.xhtml">Introduction:Lacan's Second Return to Freud</a></li>
 				<li>
 					<a href="chapter_1_en.xhtml">Chapter 1</a>
-					<ol>
+					<ol style="text-indent:2rem">
 						<li><a href="chapter_1_en.xhtml#part_1">Structure and History</a></li>
 						<li><a href="chapter_1_en.xhtml#part_2">Saussure and Political Economy</a></li>
 						<li><a href="chapter_1_en.xhtml#part_3">Representation and Production</a></li>
