--- a/book/Text/introduction.xhtml
+++ b/book/Text/introduction.xhtml
@@ -8,8 +8,9 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="catalogue_en.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="introduction_en.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<h1><p>导言：</p><p>拉康第二次回到弗洛伊德</p></h1>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="catalogue_en.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="introduction_en.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<h1>导言：</h1>
+	<h1>拉康第二次回到弗洛伊德</h1>
 	<i class="quote">不要期待在我的话语里找到比“我不自诩有解决方案”更具颠覆性的东西。</i>
 	<p style="text-align: right">雅克·拉康《精神分析的另一面》</p>
 	<p class="text" style="text-indent:0"><a id="1" class="annotation" href="introduction_en.xhtml#1">英</a>卡尔·马克思只是雅克·拉康教学中提到的众多理论家之一。其他经典思想家（尤其是柏拉图、笛卡尔和黑格尔）似乎给他的作品留下了更深的影响。在那么多对拉康颇具影响力的思想家中，我们为何偏偏要推崇马克思？难道想让拉康成为弗洛伊德-马克思主义中的又一位代表吗？（这一主义的努力早已失败，其试图通过将欲望解放为激进政治奠定基础）。还是说，这么做（偏爱马克思的理论）的目的仅仅是将拉康塑造为左翼思想家？</p>
