--- a/book/Text/introduction_en.xhtml
+++ b/book/Text/introduction_en.xhtml
@@ -8,8 +8,9 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="introduction.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="chapter_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<h1><p>Introduction:</p><p>Lacan's Second Return to Freud</p></h1>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="introduction.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="chapter_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<h1>Introduction:</h1>
+	<h1>Lacan's Second Return to Freud</h1>
 	<i class="quote">Don't expect anything more subversive in my discourse than that I do not claim to have a solution.</i>
 	<p style="text-align: right">Jacques Lacan, <span class="term">The Other Side of Psychoanalysis</span></p>
 	<p class="text" style="text-indent:0"><a id="1" class="annotation" href="introduction.xhtml#1">中</a>Karl Marx is just one of the many theorists referred to in Jacques Lacan's teachings. Other classic thinkers seem to have left a much deeper mark on his work, notably Plato, Descartes and Hegel. Why then, among such an abundance of influences, should one privilege Marx? Is it in order to make Lacan yet another representative of the Freudo-Marxist orientation, a tradition marked by a rather failed endeavour to ground radical politics on the liberation of desire? Or is the aim simply to turn Lacan into a leftist thinker?</p>
