--- a/book/Text/note_12.xhtml
+++ b/book/Text/note_12.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_11.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_13.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_11.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_13.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_12">←12</a>]</dt>
 		<dd class="footnote">路易·阿尔都塞，《保卫马克思》，巴黎：马斯佩罗，1965年，235-6。正如阿尔都塞所说，马克思抛弃了将人的类本质作为政治经济学（批判）的基础。拉康通过引入无意识主体来坚持阿尔都塞的路线，因此提出了一种反人文主义理论的精神分析版本，但这却偏离了阿尔都塞，因为后者拒绝这个主体的概念。</dd>
