--- a/book/Text/note_19.xhtml
+++ b/book/Text/note_19.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_18.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_20.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_18.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_20.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_19">←19</a>]</dt>
 		<dd class="footnote">要点在于现代科学所发现的现实是非经验性的，而且它的发现过程并不以人类观察者为中心。亚历山大·柯瓦雷关于科学的现代性的解读是拉康认识论上的主要参考，他的作品着重于关于数学规范的一种自动性。</dd>
