--- a/book/Text/note_20.xhtml
+++ b/book/Text/note_20.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_19.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_21.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_19.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_21.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_20">←20</a>]</dt>
 		<dd class="footnote">“不存在所谓的社会关系”这一公理不应误导我们得出新自由主义的结论：“不存在所谓的社会”（撒切尔）。恰恰相反，存在尽管没有潜在社会关系的社会；但对于新自由主义者来说，只存在社会关系（由前面提到的自由市场、平等交换、私有财产和私有利益的实现所支撑），而没有社会。</dd>
