--- a/book/Text/note_22.xhtml
+++ b/book/Text/note_22.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_21.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_23.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_21.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_23.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_22">←22</a>]</dt>
 		<dd class="footnote">本杰明·诺伊斯，《消极的持久性：对当代大陆理论的批判》，爱丁堡：爱丁堡大学出版社，2012年。</dd>
