--- a/book/Text/note_23.xhtml
+++ b/book/Text/note_23.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_22.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_24.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_22.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_24.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_23">←23</a>]</dt>
 		<dd class="footnote">这也是他对无意识的理解与“不明确的表征”或荣格“集体无意识”的哲学概念之间的主要区别。</dd>
