--- a/book/Text/note_24.xhtml
+++ b/book/Text/note_24.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_23.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_25.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_23.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_25.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_24">←24</a>]</dt>
 		<dd class="footnote">雅克·拉康《他者的选集》，欧洲，巴黎：Seuil，2001，229。另参见雅克·拉康，《电视：对精神分析出版业的挑战》，纽约：诺顿，1990年，97页。</dd>
