--- a/book/Text/note_25.xhtml
+++ b/book/Text/note_25.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_24.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_26.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_24.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_26.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_25">←25</a>]</dt>
 		<dd class="footnote">引用一个典型的段落，拉康也回忆说，他的回到弗洛伊德的关键点包含在回到经由异化的主体构造（最初落脚于镜像阶段的概念，后来是划斜杠的主体的概念）：“我不会回到我的‘镜像阶段’理论，那是我发展的第一个战略点，用于反对精神分析理论中所谓的“自主自我”的观点，后者在学术上的复兴合理化了一种强化自我的治疗策略，随后仅仅导向成功的适应——一种精神的退位现象，这现象与两件事有关：一是因战争而移民海外的精神分析团体的老龄化；二是原本杰出的实践退化至需要由《家政》杂志正式认可以证明其适合‘美国人的生活方式’。”“雅克·拉康，《拉康选集》，纽约：诺顿，2006,684-5页。</dd>
