--- a/book/Text/note_32.xhtml
+++ b/book/Text/note_32.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_31.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_33.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_31.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_33.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_32">←32</a>]</dt>
 		<dd class="footnote">例如，参见《研讨班17》的以下谜题：“什么东西有身体却不存在？回答：大他者”（拉康，《精神分析的另一面》，66页）。</dd>
