--- a/book/Text/note_36.xhtml
+++ b/book/Text/note_36.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_35.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_37.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_35.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_37.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_36">←36</a>]</dt>
 		<dd class="footnote">拉康的干预见：福柯《论文》第1卷，巴黎：加利马德，2001,848-9。拉康争论的背景是68年5月时，结构主义和存在主义阐释之间紧张的公共关系。详细讨论见弗朗索瓦·多斯，《结构主义的历史》，第2卷，巴黎：发现报，1992年，147-9年。</dd>
