--- a/book/Text/note_38.xhtml
+++ b/book/Text/note_38.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_37.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_39.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_37.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_39.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_38">←38</a>]</dt>
 		<dd class="footnote">德高勒的教育部在文森斯创建了一所实验性大学，并引入了学分制度，拉康在这个制度中发现了资本主义演变的一个新阶段。这个主题将在这本书的最后一章中进一步讨论。</dd>
