--- a/book/Text/note_39.xhtml
+++ b/book/Text/note_39.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_38.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_40.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_38.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_40.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_39">←39</a>]</dt>
 		<dd class="footnote">雅克·拉康，1966年12月29日在《费加罗日报》的采访。拉康对无意识与历史的联系有一个明确的目标：存在主义者，特别是萨特对结构主义的批判，认为结构主义是一种拒绝历史的用非辩证（共时）结构替代辩证运动的潮流。纵观所有实际存在的结构主义，我们可以注意到，只有列维·斯特劳斯和索绪尔有可能受到这种批评，即使在他们的情况下，这种批评也只有在忽略他们认识对象的不稳定性的情况下才有可能。</dd>
