--- a/book/Text/note_4.xhtml
+++ b/book/Text/note_4.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_3.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_5.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_3.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_5.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_4">←4</a>]</dt>
 		<dd class="footnote">可参考德勒兹：论“新哲学家”（https://www.douban.com/note/847327131/）——译者注</dd>
