--- a/book/Text/note_40.xhtml
+++ b/book/Text/note_40.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_39.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_41.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_39.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_41.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_40">←40</a>]</dt>
 		<dd class="footnote">参见《西格蒙德·弗洛伊德的心理学著作全集的标准版》，第21卷，伦敦：古董，2001,70。</dd>
