--- a/book/Text/note_50.xhtml
+++ b/book/Text/note_50.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_49.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_51.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_49.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_51.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_50">←50</a>]</dt>
 		<dd class="footnote">缺乏普遍性与缺乏稳定性和可预测性密切相关，这直接源于市场的整体数学化的不可能。参见皮埃尔-诺埃尔·吉罗，《混乱商业报》，巴黎：Seuil，2009,324。</dd>
