--- a/book/Text/note_55.xhtml
+++ b/book/Text/note_55.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_54.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_56.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_54.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_56.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_55">←55</a>]</dt>
 		<dd class="footnote">关于商品语言和人类语言加倍的更广泛的讨论，参见维尔纳·哈马赫，《阿米萨语：商品语言的弥赛亚主义和德里达的“马克思的幽灵”》，在：M.斯普林克（编辑），《幽灵般的分界线》，伦敦：Verso，2008，和最近的萨米·哈提卜，《“没有最终目的的目的论”：沃尔特·本雅明对弥赛亚的歪曲》。马尔堡：维拉格，2013年，583-98。</dd>
