--- a/book/Text/note_7.xhtml
+++ b/book/Text/note_7.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_6.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_8.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_6.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_8.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_7">←7</a>]</dt>
 		<dd class="footnote">吉尔·德勒兹和菲利克斯·瓜塔利，《反俄狄浦斯》，巴黎：米努伊特，1972年.当然，德勒兹和瓜塔利对精神分析的批判始终是模棱两可的。无疑，他们对抗的首要目标是机构化的精神分析，即国际精神分析协会，该协会已经成功地将弗洛伊德的发现和治疗目标整合到自由市场的意识形态中。</dd>
