--- a/book/Text/note_9.xhtml
+++ b/book/Text/note_9.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_8.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_10.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_8.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_10.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_9">←9</a>]</dt>
 		<dd class="footnote">“关于费尔巴哈的提纲第十一条”的内容为：哲学家们只是用不同的方式解释世界，而问题在于改变世界。——译者注</dd>
