--- a/book/Text/note_13.xhtml
+++ b/book/Text/note_13.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_12.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_14.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_12.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_14.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_13">←13</a>]</dt>
 		<dd class="footnote">“自动性（autonomy）”可以理解为“不以人的意志为转移”。——译者注</dd>
