--- a/book/Text/note_18.xhtml
+++ b/book/Text/note_18.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_17.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_19.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_17.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_19.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_18">←18</a>]</dt>
 		<dd class="footnote">阿兰·巴迪欧，《共产主义假说》，维索出版社，2010。</dd>
