--- a/book/Text/note_2.xhtml
+++ b/book/Text/note_2.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_1.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_3.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_1.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_3.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_2">←2</a>]</dt>
 		<dd class="footnote">英语中“革命”一词（revolution）在词源上本来为天文学中旋转之意，至今也仍然保留“旋转”的释义。——译者注</dd>
