--- a/book/Text/note_35.xhtml
+++ b/book/Text/note_35.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_34.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_36.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_34.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_36.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_35">←35</a>]</dt>
 		<dd class="footnote">可在未发表的《第十四期研讨班》的介绍性讲座中找到。拉康的表述在弗雷德里克·詹姆森的经典著作《政治无意识》（伦敦：劳特利奇，1983）中产生了共鸣，给这本书的书名提供了灵感。</dd>
