--- a/book/Text/note_41.xhtml
+++ b/book/Text/note_41.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_40.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_42.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_40.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_42.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_41">←41</a>]</dt>
 		<dd class="footnote">精神分析术语。指个体对童年时发生的，与某种重大的或伤害性的事件有一定联系的平凡小事的记忆。——译者注</dd>
