--- a/book/Text/note_56.xhtml
+++ b/book/Text/note_56.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_55.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_57.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_55.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_57.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_56">←56</a>]</dt>
 		<dd class="footnote">马克思，《资本论》，第1卷，176-7。</dd>
