--- a/book/Text/note_58.xhtml
+++ b/book/Text/note_58.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_57.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_59.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_57.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_59.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_58">←58</a>]</dt>
 		<dd class="footnote">雅克·拉康，《研讨班6：欲望及其解释》，巴黎：马蒂尼埃版本，2013年，371。</dd>
