--- a/book/Text/note_6.xhtml
+++ b/book/Text/note_6.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_5.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_7.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_5.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_7.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="introduction.xhtml#back_note_6">←6</a>]</dt>
 		<dd class="footnote">关于马克思主义与精神分析之间关系的起起落落，最详尽的历史记载仍然是赫尔穆特·达默，《力比多与社会》，美因河畔法兰克福：SuhrkampVerlag，1982年,特别是241页及其后.,作者在其中分析了马克思主义者抵制弗洛伊德理论的动机。</dd>
