--- a/book/Text/note_101.xhtml
+++ b/book/Text/note_101.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_100.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_102.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_100.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_102.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_101">←101</a>]</dt>
 		<dd class="footnote">同样的结论也适用于商品的分销、流通和消费。然而，马克思在《资本论》中对使用价值的中肯分析却无疑表明，即使是最遥远、最私人的消费行为，也不能免除剩余价值的提取和资本的规则。</dd>
