--- a/book/Text/note_119.xhtml
+++ b/book/Text/note_119.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_118.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_120.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_118.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_120.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_119">←119</a>]</dt>
 		<dd class="footnote">亚历山大·科伊尔，《科学思想历史研究》，巴黎：加利马德，1973年，89页。</dd>
