--- a/book/Text/note_63.xhtml
+++ b/book/Text/note_63.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_62.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_64.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_62.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_64.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_63">←63</a>]</dt>
 		<dd class="footnote">德勒泽引用于让-雅克·勒塞尔克《德勒兹与语言》，纽约：帕尔格雷夫·麦克米伦，2002年，64。也可参见拉康《他者的选集》，313-14。</dd>
