--- a/book/Text/note_70.xhtml
+++ b/book/Text/note_70.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_69.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_71.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_69.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_71.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_70">←70</a>]</dt>
 		<dd class="footnote">弗洛伊德，《标准版本》，第5卷，第560-1页（弗洛伊德的重点）。有关这段文章的更广泛的评论，请参见本书的z部分。</dd>
