--- a/book/Text/note_76.xhtml
+++ b/book/Text/note_76.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_75.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_77.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_75.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_77.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_76">←76</a>]</dt>
 		<dd class="footnote">我们可以再次回想起《研讨班17》上的这个谜题。这一点可以与马克思对商品拜物主义的批判有关，在马克思批判中，重建其逻辑机制不仅简单地废除了资本主义抽象的拜物主义，而是表明商品拜物主义的效率是建立在思想和行动之间的差异之上的。马克思会说：“他们并不知道，尽管如此，他们还是这么做了。”阿尔弗雷德·索恩-雷塞尔使用这句话是为了引入真实抽象的概念，因此人们可以立即注意到它相当接近拉康的话语概念。见阿尔弗雷德·索恩-雷塞尔《商品形式与思维形式》，1978年,103-33.关于他的作品的精神分析背景,请参见斯拉沃热·齐泽克,《意识形态的崇高对象,伦敦:Verso,1989,16-21.</dd>
