--- a/book/Text/note_87.xhtml
+++ b/book/Text/note_87.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_86.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_88.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_86.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_88.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_87">←87</a>]</dt>
 		<dd class="footnote">拉康，《电视》，112。</dd>
