--- a/book/Text/note_88.xhtml
+++ b/book/Text/note_88.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_87.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_89.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_87.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_89.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_88">←88</a>]</dt>
 		<dd class="footnote">在评论一个阐述了“强加词汇”的症状的精神病案例时，拉康将语言比作癌症：“为什么没人觉得我们所依赖的词语在某种程度上是强加给我们的？”这样一来，那些通常所谓的病人有时会比健康的人走得更远。问题是，为什么所谓的正常人没有意识到语言是一种寄生虫，一种瘟疫，一种影响人类的癌症？”——雅克·拉康，《研讨会22：圣状》，巴黎：苏伊尔版，2005年，95。</dd>
