--- a/book/Text/note_120.xhtml
+++ b/book/Text/note_120.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_119.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_121.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_119.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_121.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_120">←120</a>]</dt>
 		<dd class="footnote">雅克·拉康，《研讨班18：一场不是佯装的演讲》，巴黎：塞伊尔版，2007年，28。另请参阅阿伦卡·祖帕西克，“精神分析中的现实主义”：洛伦佐·基萨（再版），《拉康与哲学》，墨尔本：再出版社，2014,28。</dd>
