--- a/book/Text/note_68.xhtml
+++ b/book/Text/note_68.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_67.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_69.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_67.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_69.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_68">←68</a>]</dt>
 		<dd class="footnote">姆拉登·杜拉尔，“介绍：理应享受的主体”，阿兰·格罗斯里查德，《苏丹的宫廷》，伦敦：Verso，1998，第十八章。</dd>
