--- a/book/Text/note_78.xhtml
+++ b/book/Text/note_78.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_77.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_79.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_77.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_79.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_78">←78</a>]</dt>
 		<dd class="footnote">拉康的话也可以翻译成：“只要物品还在被交换，钱生钱的假设就会继续存在。”显然，这一假设可以追溯到资本主义之前。</dd>
