--- a/book/Text/note_86.xhtml
+++ b/book/Text/note_86.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_85.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_87.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_85.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_87.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_86">←86</a>]</dt>
 		<dd class="footnote">参见索绪尔《普通语言学教程》，73-4。</dd>
