--- a/book/Text/note_90.xhtml
+++ b/book/Text/note_90.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_89.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_91.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_89.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_91.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_90">←90</a>]</dt>
 		<dd class="footnote">让-克劳德·米尔纳，《一切的清晰度》，巴黎：Verdier，2011,90。</dd>
