--- a/book/Text/note_92.xhtml
+++ b/book/Text/note_92.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_91.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_93.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_91.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_93.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_92">←92</a>]</dt>
 		<dd class="footnote">这一主张对理解拉康的唯物主义取向的意义被阿伦卡·祖帕西克（《性与本体论》：阿纳拉塔，2011）进行了广泛的分析，我从这些文本出发进行了延伸。</dd>
