--- a/book/Text/note_94.xhtml
+++ b/book/Text/note_94.xhtml
@@ -8,7 +8,7 @@
 </head>
 
 <body class="main">
-	<div style="position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_93.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_95.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_93.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_95.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_94">←94</a>]</dt>
 		<dd class="footnote">齐泽克将卢卡奇引入阶级意识描述为对黑格尔的唯心主义误读：“这就是为什么卢卡奇单纯地提出用无产阶级取代黑格尔的绝对精神时仍然过于唯心主义的原因：“卢卡奇在这里不是真正的黑格尔主义者，而是一个前黑格尔的唯心主义者。”斯拉沃热·齐泽克，《生于末世》，伦敦：Verso，2011,226。</dd>
