--- a/book/Text/catalogue.xhtml
+++ b/book/Text/catalogue.xhtml
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="../Styles/content.css"/>
 	<title>目录</title>
 </head>
+
 <body epub:type="frontmatter" class="main">
-	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="claim.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="catalogue_en.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<nav epub:type="toc" id="toc" role="doc-toc" style="padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%">
 		<div>
 			<h1 style="text-align:center">目录</h1>
@@ -21,10 +21,22 @@
 						<li><a href="chapter_1.xhtml#part_3">表征和生产</a></li>
 						<li><a href="chapter_1.xhtml#part_4">剩余与丧失的逻辑</a></li>
 					</ol>
+					<a href="chapter_2.xhtml">第二章</a>
+					<ol style="text-indent:2rem">
+						<li><a href="chapter_2.xhtml#part_1">世界观</a></li>
+						<li><a href="chapter_2.xhtml#part_2">无意识的劳动理论</a></li>
+						<li><a href="chapter_2.xhtml#part_3">快乐利润</a></li>
+						<li><a href="chapter_2.xhtml#part_4">压抑和生产</a></li>
+					</ol>
 				</li>
 				<li><a href="note_1.xhtml">注释</a></li>
 			</ol>
 		</div>
 	</nav>
+  <nav epub:type="landmarks" id="landmarks" hidden="">
+    <h1>Landmarks</h1>
+    <ol>
+    </ol>
+  </nav>
 </body>
 </html>
