--- a/book/Text/catalogue_en.xhtml
+++ b/book/Text/catalogue_en.xhtml
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="../Styles/content.css"/>
 	<title>Catalogue</title>
 </head>
+
 <body epub:type="frontmatter" class="main">
-	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="catalogue.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="introduction.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<nav epub:type="toc" id="toc" role="doc-toc" style="padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%">
 		<div>
 			<h1 style="text-align:center">CATALOGUE</h1>
@@ -20,6 +20,13 @@
 						<li><a href="chapter_1_en.xhtml#part_2">Saussure and Political Economy</a></li>
 						<li><a href="chapter_1_en.xhtml#part_3">Representation and Production</a></li>
 						<li><a href="chapter_1_en.xhtml#part_4">The Logic of Surplus and Loss</a></li>
+					</ol>
+					<a href="chapter_2_en.xhtml">Chapter 2</a>
+					<ol style="text-indent:2rem">
+						<li><a href="chapter_2_en.xhtml#part_1">Weltanschauung</a></li>
+						<li><a href="chapter_2_en.xhtml#part_2">The labour Theory of The Unconscious</a></li>
+						<li><a href="chapter_2_en.xhtml#part_3">Lustgewinn</a></li>
+						<li><a href="chapter_2_en.xhtml#part_4">Repression and Production</a></li>
 					</ol>
 				</li>
 				<li><a href="note_1.xhtml">Notes</a></li>
