--- a/book/Text/catalogue_en.xhtml
+++ b/book/Text/catalogue_en.xhtml
@@ -8,6 +8,7 @@
 </head>
 
 <body epub:type="frontmatter" class="main">
+	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="catalogue.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="chapter_1.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<nav epub:type="toc" id="toc" role="doc-toc" style="padding: 0;position: absolute;left: 0;top: 0;display: flex;justify-content: center;align-items: center;width: 100%;height: 100%">
 		<div>
 			<h1 style="text-align:center">CATALOGUE</h1>
