改进翻译效果

--- a/book/Text/note_39.xhtml
+++ b/book/Text/note_39.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_38.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_40.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_39">←39</a>]</dt>
-		<dd class="footnote">雅克·拉康，1966年12月29日在《费加罗日报》的采访。拉康对无意识与历史的联系有一个明确的目标：存在主义者，特别是萨特对结构主义的批判，认为结构主义是一种拒绝历史的用非辩证（共时）结构替代辩证运动的潮流。纵观所有实际存在的结构主义，我们可以注意到，只有列维·斯特劳斯和索绪尔有可能受到这种批评，即使在他们的情况下，这种批评也只有在忽略他们认识对象的不稳定性的情况下才有可能。</dd>
+		<dd class="footnote">雅克·拉康，1966年12月29日在《费加罗日报》的采访。拉康将无意识与历史关联起来具有一个明确的靶子：存在主义者，特别是萨特对结构主义的批判，其认为结构主义是一股大概拒绝历史的、用非辩证（共时）结构替代辩证运动的潮流。纵观所有现存的结构主义，我们可以注意到，只有列维·斯特劳斯和索绪尔有可能遭到这种批评，即使对于他们而言，这种批评也只有在遗漏他们认识的对象的不稳定性的情况下才有可能。</dd>
 		<dd class="footnote">J. Lacan, interview in <span class="term">Figaro littéraire</span>, 29 December 1966. Lacan's connection of the unconscious with history has as a clear target: the existentialist, and notably Sartres critique of structuralism as a current that presumably rejects history and substitutes the dialectical movement with the non-dialectical (synchronic) structural permutations. Looking at all the actually existing structuralisms, we can notice that only Lévi-Strauss and Saussure could potentially fall under such criticism, and even in their case such criticism would be possible solely under the condition that the instabilities of their epistemic objects be omitted.</dd>
 	</dl>
 </body>
