--- a/book/Text/note_47.xhtml
+++ b/book/Text/note_47.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_46.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_48.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_47">←47</a>]</dt>
-		<dd class="footnote">马克思明确地声称，商品的生产总是已经包括了需求的生产。例如这句著名的话：“生产不仅为需要提供了材料，而且为材料提供了需求……因此，生产不仅为主体创造了对象，而且还为对象创造了主体。如此一来，生产就产生了消费。”马克思，格利家：《政治经济学批判的基础》，伦敦：企鹅出版社，1993,9。</dd>
+		<dd class="footnote">马克思明确声称，商品的生产总是已包含含了需求的生产比如如这名言所说说：“生产不仅需求求提供了材料，而且为材料提供了需求……因此，生产不仅为主体创造客体体，还客体体创造了主体因此此，生行为生产产了消行为为。”马克思，格利家：《政治经济学批判的基础》，伦敦：企鹅出版社，1993,9。</dd>
 		<dd class="footnote">Marx explicitly claims that the production of commodities always-already comprises the production of needs. For example, in the famous lines: ‘Production not only supplies a material to the need, but it also supplies a need for the material. . . Production thus not only creates an object for the subject, but also a subject for the object. Thus production produces consumption.’ K. Marx, Grundrisse: <span class="term">Foundations of the Critique of Political Economy</span>, London: Penguin Books, 1993, 92.</dd>
 	</dl>
 </body>
