--- a/book/Text/note_66.xhtml
+++ b/book/Text/note_66.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_65.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_67.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_66">←66</a>]</dt>
-		<dd class="footnote">“但如果所有人都同样是对的和错的，相信这个的人既说不出任何可理解的话；因为他说“是”的同时说了“不是”。如果他不做出判断而思考和不思考，只是若无其事，他和植物之间会有什么区别呢？”满足了。1008b.参见《亚里士多德全集》，第2卷，普林斯顿，新泽西州：普林斯顿大学出版社，1995,1592年。</dd>
+		<dd class="footnote">“但如果所事物物都同既是是对也是是错的，相这套说法法的便便说不出任何可理解的话；因为他说“是”的同也也说了“不是”。如果他不做出判，，只是是思与与不思考，只是若无其事，他和植物有什么区别呢？”满足了。1008b.参见《亚里士多德全集》，第2卷，普林斯顿，新泽西州：普林斯顿大学出版社，1995,1592年。</dd>
 		<dd class="footnote">‘But if all are alike both right and wrong, one who believes this can neither speak nor say anything intelligible; for he says at the same time both "yes" and “no”. And if he makes no judgment but thinks and does not think, indifferently, what difference will there be between him and the plants?’ <span class="term">Met</span>. 1008b. See <span class="term">The Complete Works of Aristotle</span>, Vol.2, Princeton, NJ: Princeton University Press, 1995, 1592.</dd>
 	</dl>
 </body>
