--- a/book/Text/note_94.xhtml
+++ b/book/Text/note_94.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_93.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_95.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_94">←94</a>]</dt>
-		<dd class="footnote">齐泽克将卢卡奇引入阶级意识描述为对黑格尔的唯心主义误读：“这就是为什么卢卡奇单纯地提出用无产阶级取代黑格尔的绝对精神时仍然过于唯心主义的原因：“卢卡奇在这里不是真正的黑格尔主义者，而是一个前黑格尔的唯心主义者。”斯拉沃热·齐泽克，《生于末世》，伦敦：Verso，2011,226。</dd>
+		<dd class="footnote">齐泽克将卢卡奇引入阶级意识描述为对黑格尔的唯心主义误读：“这就是为什么当卢卡奇单纯地提出用无产阶级取代黑格尔的绝对精神时，他仍太过唯心主义：卢卡奇在这里不是真正的黑格尔主义者，而是一个前黑格尔的唯心主义者。”斯拉沃热·齐泽克，《生于末世》，伦敦：Verso，2011,226。</dd>
 		<dd class="footnote">Zizek describes Lukacs's introduction of class-consciousness as an idealist misreading of Hegel: ‘This is why Lukacs also remains all too idealist when he proposes simply replacing Hegelian Spirit with the proletariat as the Subject-Object of History: Lukacs is here not really Hegelian, but a pre-Hegelian idealist.' S. Zizek, <span class="term">Living in the End Times</span>, London: Verso, 2011, 226.</dd>
 	</dl>
 </body>
