--- a/book/Text/note_44.xhtml
+++ b/book/Text/note_44.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_43.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_45.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_44">←44</a>]</dt>
-		<dd class="footnote">同上，214（我着重于此）。翻译内容已修改。</dd>
+		<dd class="footnote">同上，214页（我认为这是重点）。翻译内容已修改。</dd>
 		<dd class="footnote">Ibid., 214 (my emphasis). Translation modified.</dd>
 	</dl>
 </body>
