--- a/book/Text/note_67.xhtml
+++ b/book/Text/note_67.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_66.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_68.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_67">←67</a>]</dt>
-		<dd class="footnote">柏拉图和亚里士多德关于金钱和价值的讨论，见马塞尔·赫纳夫，《真相的代价》，巴黎：2002。弥漫在亚里士多德的哲学构成中的对语言作为否定性的诡辩术“歪曲”在芭芭拉·卡辛和米歇尔·纳西《意义的决定》有详细阐述，巴黎：弗林，1992。</dd>
+		<dd class="footnote">柏拉图和亚里士多德关于金钱和价值的讨论，见马塞尔·赫纳夫，《真相的代价》，巴黎：2002。弥漫在亚里士多德的哲学构建中的对语言作为否定性的诡辩术式“倒错”在芭芭拉·卡辛和米歇尔·纳西《意义的决定》有详细阐述，巴黎：弗林，1992。</dd>
 		<dd class="footnote">For the discussion of money and value in Plato and Aristotle, see M. Hénaff, <span class="term">Le prix de la vérité</span>, Paris: Seuil 2002. The sophistic ‘perversion’ of language as negativity that haunts the constitution of philosophy in Aristotle is examined in B. Cassin and M. Narcy, <span class="term">La décision du sens</span>, Paris: Vrin, 1992.</dd>
 	</dl>
 </body>
