--- a/book/Text/note_75.xhtml
+++ b/book/Text/note_75.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_74.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_76.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_75">←75</a>]</dt>
-		<dd class="footnote">回想一下拉康在《研讨班7》中的立场，在这次研讨班中，这个词以黑格尔的方式被理解为对大写之物的谋杀，是对享乐的禁欲的能指。这个主题是源于关于弗洛伊德的主题，即在《图腾与禁忌》中对原始父亲的谋杀，然后是在《摩西和一神论》中对伟人的谋杀。参见雅克·拉康，《研讨班7：精神分析的伦理学》:，纽约：诺顿，1992,81,174。</dd>
+		<dd class="footnote">回想一下拉康在《研讨班7》中的立场，在这次研讨班中，这个词以黑格尔的方式被理解为对大写之物的谋杀，是对原乐的禁欲的能指。这个话题由弗洛伊德的思想发展而来，即《图腾与禁忌》中对原始父亲的谋杀，以及在《摩西和一神论》中对伟人的谋杀。参见雅克·拉康，《研讨班7：精神分析的伦理学》，纽约：诺顿，1992,81,174。</dd>
 		<dd class="footnote">Recall Lacan's position in <span class="term">Seminar VII</span>, in which, in a Hegelian manner, the word is understood as a murder of the Thing, and the signifier a mortification of <span class="term">jouissance</span>. The topic is there developed in reference to the Freudian theme of the murder of the primordial father in <span class="term">Totem and Taboo</span> and then the murder of the Great Man in <span class="term">Moses and Monotheism</span>. See J. Lacan, <span class="term">Seminar</span>, Book VII, <span class="term">The Ethics of Psychoanalysis</span>, New York: Norton, 1992, 81, 174.</dd>
 	</dl>
 </body>
