--- a/book/Text/note_78.xhtml
+++ b/book/Text/note_78.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_77.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_79.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_78">←78</a>]</dt>
-		<dd class="footnote">拉康的话也可以翻译成：“只要物品还在被交换，钱生钱的假设就会继续存在。”显然，这一假设可以追溯到资本主义之前。</dd>
+		<dd class="footnote">拉康的话也可以翻译成：“只要物品在被交换，钱生钱的假设就会继续存在。”显然，这一假设可以追溯到资本主义之前。</dd>
 		<dd class="footnote">Lacan's remark could also be translated: ‘As long as things are exchanged, the hypothesis of money-breeding money will persist.’ Clearly, the hypothesis dates further back than capitalism.</dd>
 	</dl>
 </body>
