--- a/book/Text/note_93.xhtml
+++ b/book/Text/note_93.xhtml
@@ -11,7 +11,7 @@
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="note_92.xhtml"><button style="width:5rem;height:2.5rem">←</button></a><a href="note_94.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
 	<dl class="back_note">
 		<dt>[<a href="chapter_1.xhtml#back_note_93">←93</a>]</dt>
-		<dd class="footnote">拉康，《电视频道》，36。翻译内容已修改。</dd>
+		<dd class="footnote">拉康，《电视》，36。翻译内容已修改。</dd>
 		<dd class="footnote">Lacan, <span class="term">Television</span>, 36. Translation modified.</dd>
 	</dl>
 </body>
