--- a/book/Text/cover.xhtml
+++ b/book/Text/cover.xhtml
@@ -13,6 +13,6 @@
 </head>
 <body>
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<image style="display:block;margin-left:auto;margin-right:auto;width:50%;max-width:100%;height:auto;" xlink:href="../Images/cover.jpeg"/>
+	<image style="display:block;margin-left:auto;margin-right:auto;width:50%;max-width:100%;height:auto;" href="../Images/cover.jpeg"/>
 </body>
 </html>
