--- a/book/Text/cover.xhtml
+++ b/book/Text/cover.xhtml
@@ -13,6 +13,8 @@
 </head>
 <body>
 	<div style="z-index:1;position:fixed;right:0.5rem;top:0.5rem;width:10rem;height:2.5rem"><a href="information.xhtml"><button style="width:5rem;height:2.5rem">→</button></a></div>
-	<image style="height:100%;width:auto;" href="../Images/cover.jpeg"/>
+	<div style="position:absolute;left:0;top:0;width:100%;height:100%;">
+		<image style="height:100%;width:auto;" href="../Images/cover.jpeg"/>
+	</div>
 </body>
 </html>
